Add several slides to SLAM

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -76,6 +76,10 @@
 \newcommand{\map}{m}
 \newcommand{\mapRandomVariable}{m}
 
+% SLAM slides
+\newcommand{\informationMatrix}{\Omega}
+\newcommand{\error}{\vec{e}}
+
 
 % Motion model
 \newcommand{\position}{\vec{p}}
