--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -372,21 +372,158 @@
 	
 \end{frame}
 
+
 \begin{frame}
-	\frametitle{Graph-based SLAM usando Pose-Graph}
+	\frametitle{Crear una arista si...}
 	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
-    \begin{itemize}
-		\item Hay un interplay entre el front-end y el back-end
-		\item El mapa ayuda a determinar las restricciones reduciendo el espacio de búsqueda
-		\item El front-end se encarga de convertir las mediciones crudas de los sensores en restricciones en el grafo.
-		\item El back-end se encarga de tomar las restricciones dadas por el front-end y optimizar el grafo.
-	\end{itemize}
 	
-	\begin{figure}[!h]
-		\includegraphics[width=\textwidth]{images/slam_frontend_backend_graph.pdf}
-	\end{figure}
+	\begin{itemize}
+		\item<1-> Una restricción/arista existe entre el nodo $x_{i}$ y $x_{j}$ si el robot observa la misma parte del entorno desde $x_{i}$ y desde $x_{j}$
+		\item<2>  Construimos una restricción virtual entre la posición de $x_{j}$ vista desde $x_{i}$
+	\end{itemize}
+	\only<1>{
+		\begin{figure}
+			\includegraphics[width=0.44\textwidth]{pose_graph_edge_lidar.pdf}
+		\end{figure}
+	}
+	\only<2>{
+		\begin{figure}
+			\includegraphics[width=0.44\textwidth]{pose_graph_edge_lidar2.pdf}
+		\end{figure}
+	}
 	
 \end{frame}
+
+
+\begin{frame}
+	\frametitle{La matriz de información de las aristas}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+    \begin{itemize}
+		\item Las observaciones tienen ruido
+		\item La matriz de información $\informationMatrix_{ij}$ para cada arista codifica su incertidumbre
+		\item Mitras más grande $\informationMatrix_{ij}$, más importa la arista en al optimización.
+	\end{itemize}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{La matriz de información de las aristas}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+    \begin{figure}[!h]
+		\includegraphics[width=0.7\textwidth]{images/factor_graph_edge_example.pdf}
+	\end{figure}
+
+	Objetivo:
+	\begin{equation*}
+		x^{*} = \argmin_{\state} \sum_{ij} \error^{\top}_{ij} \informationMatrix_{ij} \error_{ij}
+	\end{equation*}
+	
+\end{frame}
+
+
+
+\begin{frame}
+	\frametitle{Mínimos cuadrados en SLAM}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	Podemos minimizar el error utilizaremos mínimos cuadrados (\emph{Least Square})
+	\begin{align*}
+		\state^{*} &= \argmin_{\state} \sum_{ij} \error^{\top}_{ij}(\state_{i},\state_{j}) \informationMatrix_{ij} \error_{ij}(\state_{i},\state_{j})\\
+	   		  &= \argmin_{\state} \sum_{k} \error^{\top}_{k}(\state) \informationMatrix_{k} \error_{k}(\state)
+	\end{align*}
+	
+	El vector estado es la concatenación de los nodos pose $\state = (\state_{1}^{\top} \state_{2}^{\top} \dots \state_{n}^{\top})$
+	
+	Tenemos que definir la función de error...
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Función de error}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Gauss-Newton para la minimización del error}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Linearizar la función de error}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Derivada de la función de error}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Jacobianos y problema esparso}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Consecuencia de que sea un problema esparso}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Ilustración de la estructura}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Consecuencia de que sea un problema esparso}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Resumen del problema esparso}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{El sistema Lineal}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Construcción del sistema lineal}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Algoritmo}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Ejemplo 1D}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Problemas...}
+	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+	
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Graph-based SLAM usando Pose-Graph}
