Add pose graph error function image

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -77,8 +77,11 @@
 \newcommand{\mapRandomVariable}{m}
 
 % SLAM slides
-\newcommand{\informationMatrix}{\Omega}
+\newcommand{\informationMatrix}{\vec{\Omega}}
 \newcommand{\error}{\vec{e}}
+\newcommand{\observationBold}{\vec{z}}
+\newcommand{\stateBold}{\vec{x}}
+\newcommand{\jacobian}{\vec{J}}
 
 
 % Motion model
