Add linear system sparsity images

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -3,6 +3,9 @@
 \usepackage{amsopn}
 \usepackage{mathtools}
 
+% set matrix maximum length
+\setcounter{MaxMatrixCols}{20}
+
 % math
 \renewcommand{\vec}[1]{\boldsymbol{\mathbf{#1}}}
 \newcommand{\norm}[1]{\lVert#1\rVert}
@@ -82,6 +85,8 @@
 \newcommand{\observationBold}{\vec{z}}
 \newcommand{\stateBold}{\vec{x}}
 \newcommand{\jacobian}{\vec{J}}
+\newcommand{\linearSystemb}{\vec{b}}
+\newcommand{\linearSystemH}{\vec{H}}
 
 
 % Motion model
