Add linear system sparsity image2

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -583,6 +583,10 @@
 	\frametitle{Consecuencia de que sea un problema esparso}
 	\note{Información extraída de https://youtu.be/uHbRKvD8TWg}
 	
+ \begin{figure}
+		\includegraphics[width=0.9\textwidth]{linear_system_sparsity2.pdf}
+	\end{figure}
+	
 \end{frame}
 
 \begin{frame}
