--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -895,7 +895,7 @@
     \end{itemize}
 
  	\begin{figure}[!h]
-    \includegraphics[width=0.2\textwidth]{pose_graph_relative_uncertainty.png}
+    \includegraphics[width=0.25\textwidth]{pose_graph_relative_uncertainty.pdf}
     \end{figure}
     
 \end{frame}
