Add pose landmark graph example image

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -901,7 +901,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Resumen hasta ahora}
+    \frametitle{Resumen de Pose-Graph}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
     
     \begin{itemize}
@@ -912,6 +912,51 @@
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+   	\begin{figure}[!h]
+        \includegraphics[width=0.5\textwidth]{images/pose_landmark_graph_example.pdf}
+    \end{figure}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Graph-Based SLAM con landmarks}
+    \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
+    
+\end{frame}
 
 \begin{frame}
     \frametitle{Graph-Based SLAM con landmarks}
